# Lab3

./: CMakeLists.txt  README.md
src/: bitmap.txt  main.cpp
